--- a/style/style.css
+++ b/style/style.css
@@ -39,6 +39,8 @@
      margin-bottom: 20px;
      border-bottom: 1px solid var(--secondary);
      padding-bottom: 10px;
+
+     font-style: italic;
  }
 
  .sidebar ul {
@@ -59,6 +61,9 @@
      color: var(--secondary);
  }
 
+
+
+
  .search-bar {
      margin: 20px 0;
  }
@@ -77,41 +82,47 @@
  }
 
  header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    background: var(--primary);
-    color: white;
-    padding: 20px;
-    text-align: center;
-    border-radius: 8px;
-    margin-bottom: 20px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: space-between;
+     align-items: center;
+     background: var(--primary);
+     color: white;
+     padding: 20px;
+     text-align: center;
+     border-radius: 8px;
+     margin-bottom: 20px;
+     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  }
 
- header .text_title  {
+ header .text_title {
+     text-wrap: nowrap;
  }
 
  /* Navigation */
- nav {
-     background: var(--secondary);
+ .nav_sidebar {
+     display: none;
+ }
+
+ .nav {
      padding: 10px;
      border-radius: 8px;
      margin-bottom: 20px;
  }
 
- nav ul {
+ .nav ul {
      display: flex;
      justify-content: center;
      list-style: none;
  }
 
- nav li {
-     margin: 0 15px;
+ .nav li {
+     margin: 0 10px;
+     margin-top: 20px;
  }
 
- nav a {
+ .nav a {
      color: var(--dark);
      text-decoration: none;
      font-weight: bold;
@@ -119,8 +130,8 @@
      color: white;
  }
 
- nav a:hover {
-     color: var(--primary);
+ .nav a:hover {
+     color: var(--secondary);
  }
 
  /* Survey Form */
@@ -181,11 +192,11 @@
  }
 
  option {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    background-color: white;
-    color: #333;
-    font-style: italic;
+     padding-top: 10px;
+     padding-bottom: 10px;
+     background-color: white;
+     color: #333;
+     font-style: italic;
  }
 
  option:hover {
@@ -233,7 +244,7 @@
  }
 
  section {
-    color: #333;
+     color: #333;
  }
 
  /* Footer */
@@ -261,8 +272,10 @@
  }
 
  .menu-toggle {
-    display: none;
+     display: none;
  }
+
+
  /* Animations */
  @keyframes fadeIn {
      from {
@@ -277,13 +290,35 @@
  }
 
  /* Responsive Design */
+ @media (max-width: 930px) {
+     header .text_title {
+         font-size: 12px;
+     }
+ }
+
+ @media (max-width: 865) {
+     header .text_title {
+         display: none;
+     }
+ }
+
  @media (max-width: 768px) {
      .container {
          flex-direction: column;
      }
 
-     h3 {
-        /* margin-left: 50px; */
+     .nav_sidebar {
+         display: block;
+     }
+
+     .nav_sidebar .links {
+         display: flex;
+         gap: 25px;
+         flex-direction: row;
+     }
+
+     .nav {
+         display: none;
      }
 
      .sidebar {
@@ -298,13 +333,14 @@
          transform: translateX(0);
      }
 
+
      .menu-toggle {
          display: block;
          position: fixed;
          top: 10px;
          right: 30px;
-         z-index: 101;
          color: white;
+         z-index: 101;
          margin-top: 10px;
          margin-left: 10px;
          padding: 5px;
@@ -316,19 +352,19 @@
      }
 
      header {
-        font-size: 15px;
+         font-size: 15px;
      }
 
      .survey-form h2 {
-        font-size: 20px;
+         font-size: 20px;
      }
 
-     nav ul {
+     .nav ul {
          flex-direction: row;
          align-items: center;
      }
 
-     nav li {
+     .nav li {
          margin-left: 5px 0;
      }
  }
